# Trex

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  index.md  presets.md  safety.md
ktrex/presets/: backend_api.json  cli_tool.json  config_project.json  frontend_web.json  generic_project.json  python_package.json  research_project.json
trex/: main.py  presets.py  tui.py
